# SeaCore

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/workflows/: release.yml  test-matrix.yml
Test/: generate_reality_keys.ps1  profile_perf.py  rst_server.py  test_e2e.ps1  test_e2e.sh  test_matrix.py  test_udp_proxy.py
craftls_local/rustls/: Cargo.toml
craftls_local/rustls/src/: conn.rs  lib.rs  quic.rs  vecbuf.rs
craftls_local/rustls/src/client/: builder.rs  client_conn.rs  hs.rs
craftls_local/rustls/src/crypto/ring/: quic.rs
craftls_local/rustls/src/msgs/: enums.rs  handshake.rs  macros.rs
craftls_local/rustls/src/server/: server_conn.rs
craftls_local/rustls/src/tls13/: mod.rs
docs/: interop-and-operations.md  testing-matrix.md
seacore/: Cargo.toml
seacore-protocol/: Cargo.toml
seacore-protocol/src/: lib.rs  marshal.rs  model.rs  quic.rs  reality.rs  unmarshal.rs
seacore-protocol/src/protocol/: address.rs  authenticate.rs  connect.rs  dissociate.rs  heartbeat.rs  mod.rs  packet.rs  ping.rs  tests.rs
seacore/src/: auth_limit.rs  client.rs  main.rs  metrics.rs  router.rs  server.rs  session_policy.rs  sniffer.rs
