[workspace]
members = ["seacore-protocol", "seacore"]
resolver = "2"

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "GPL-3.0-or-later"

[workspace.dependencies]
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
parking_lot = "0.12"

[profile.release]
opt-level = "z"
lto = "fat"
strip = true
codegen-units = 1

[patch.crates-io]
# Attempting to drop-in replace rustls with craftls for ClientHello masquerading
# Note: craftls is a rustls fork that allows ClientHello customization.
rustls = { path = "craftls_local/rustls" }
