[package]
name = "seacore-protocol"
description = "Core implementation of SeaCore protocol with QUIC integration"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytes = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
eyre = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
